--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
             'Content-Type': 'application/json'
           },
           body: JSON.stringify({
-            messages: conversationHistory
+            message: userMessage
           })
         });
 
