--- a/index.html
+++ b/index.html
@@ -3,31 +3,27 @@
  <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lazul Chat v7</title>
+  <title>Lazul - AI Chat Assistant</title>
   <script src="/_sdk/element_sdk.js"></script>
   <style>
-    body {
-      box-sizing: border-box;
-    }
-    
     * {
       margin: 0;
       padding: 0;
       box-sizing: border-box;
     }
 
-    html, body {
+    body {
+      box-sizing: border-box;
+      font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+      background: #000000;
       height: 100%;
       width: 100%;
+      overflow: hidden;
     }
 
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', sans-serif;
-      background: #000000;
-      color: #FFFFFF;
-      width: 100%;
+    html {
       height: 100%;
-      overflow: hidden;
+      width: 100%;
     }
 
     .chat-container {
@@ -50,13 +46,12 @@
       font-weight: 700;
       color: #FFFFFF;
       margin-bottom: 0.5rem;
-      letter-spacing: -0.5px;
     }
 
     .sidebar-tagline {
       font-size: 0.9rem;
-      color: #999999;
-      font-weight: 400;
+      color: #888888;
+      margin-bottom: 2rem;
     }
 
     .main-chat {
@@ -64,7 +59,7 @@
       display: flex;
       flex-direction: column;
       background: #000000;
-      width: 100%;
+      height: 100%;
     }
 
     .chat-messages {
@@ -91,12 +86,10 @@
 
     .message {
       display: flex;
-      gap: 0.75rem;
-      max-width: 70%;
-      animation: slideIn 0.3s ease;
+      animation: fadeIn 0.3s ease;
     }
 
-    @keyframes slideIn {
+    @keyframes fadeIn {
       from {
         opacity: 0;
         transform: translateY(10px);
@@ -108,16 +101,16 @@
     }
 
     .message.user {
-      align-self: flex-end;
-      flex-direction: row-reverse;
+      justify-content: flex-end;
     }
 
     .message.bot {
-      align-self: flex-start;
+      justify-content: flex-start;
     }
 
     .message-bubble {
-      padding: 0.875rem 1.25rem;
+      max-width: 70%;
+      padding: 1rem 1.25rem;
       border-radius: 18px;
       font-size: 0.95rem;
       line-height: 1.5;
@@ -136,6 +129,19 @@
       border-bottom-left-radius: 4px;
     }
 
+    .typing-indicator .message-bubble {
+      animation: pulse 1.5s infinite;
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        opacity: 0.6;
+      }
+      50% {
+        opacity: 1;
+      }
+    }
+
     .input-container {
       padding: 1.5rem 2rem;
       background: #000000;
@@ -146,8 +152,6 @@
       display: flex;
       gap: 0.75rem;
       align-items: center;
-      max-width: 1000px;
-      margin: 0 auto;
     }
 
     .input-box {
@@ -324,17 +328,13 @@
           })
         });
 
-        if (!response.ok) {
-          throw new Error(`API error: ${response.status}`);
-        }
-
         const data = await response.json();
 
-if (!response.ok) {
-  throw new Error(data.error || 'API error');
-}
+        if (!response.ok) {
+          throw new Error(data.error || `API error: ${response.status}`);
+        }
 
-const botMessage = data.response;
+        const botMessage = data.response;
 
         // Add bot response to conversation history
         conversationHistory.push({
@@ -345,9 +345,9 @@ const botMessage = data.response;
         return botMessage;
 
       } catch (error) {
-  console.error('Error calling chatbot API:', error);
-  return "I'm having trouble right now. Please try again in a moment.";
-}
+        console.error('Error calling chatbot API:', error);
+        return "I'm having trouble right now. Please try again in a moment.";
+      }
     }
 
     async function sendMessage() {
@@ -490,5 +490,5 @@ const botMessage = data.response;
       });
     }
   </script>
- <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a4981fa466e0beb',t:'MTc2NDE2MTM4Ni4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+ <script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9a4a37e8a4f2cd8d',t:'MTc2NDE2ODgzOC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
